# Scripts

bash/newpy/: README.md  newpy  newpy-defaults.conf
bash/pyMaker/: README.md  newpy
python/ARPdicover/: ARPdicover.py  README.md  requirements.txt
python/dirdom/: .gitignore  README.md  dirdom.py  pyproject.toml  requirements.txt
python/direnum/: README.md  direnum.py
python/subenum/: README.md  subenum.py
