[project]
name = "dirdom"
version = "0.1.0"
description = ""
requires-python = ">=3.10"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
